--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "weather_app_mobx",
+    "name": "weather_app",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
@@ -136,9 +136,11 @@
     "devDependencies": {
         "@babel/plugin-proposal-decorators": "^7.4.4",
         "classnames": "^2.2.6",
+        "final-form": "^4.18.5",
         "mobx": "^5.13.0",
         "mobx-react": "^6.1.3",
         "mobx-sync": "^2.1.2",
+        "react-final-form": "^6.3.0",
         "react-toggle-switch": "^3.0.4"
     }
 }
